# ChangeLog for dev-java/junit
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/junit/ChangeLog,v 1.22 2006/07/21 01:57:02 nichoj Exp $

*junit-3.8.1-r2 (21 Jul 2006)

  21 Jul 2006; Joshua Nichols <jnichols@gentoo.org> +junit-3.8.1-r2.ebuild:
  Revision bump to use new Java system.

  02 Aug 2005; Petteri Räty <betelgeuse@gentoo.org> junit-3.8.1-r1.ebuild:
  The installed source package doesn't include class files any more.

  09 Jul 2005; Thomas Matthijs <axxo@gentoo.org> junit-3.8.1-r1.ebuild:
  fix deps, and source useflag support

  26 Jan 2005; Markus Rothe <corsair@gentoo.org> junit-3.8.1-r1.ebuild:
  Stable on ppc64

  18 Dec 2004; Markus Rothe <corsair@gentoo.org> junit-3.8.1-r1.ebuild:
  added ~ppc64 to KEYWORDS

  14 Nov 2004; Thomas Matthijs <axxo@gentoo.org> junit-3.8.1-r1.ebuild:
  add doc useflag, and jikes support 70798, patch by Jan Brinkmann
  <lucky@the-luckyduck.de

  29 Oct 2004; Thomas Matthijs <axxo@gentoo.org> junit-3.8.1-r1.ebuild:
  remove nomirror

  16 Oct 2004; Thomas Matthijs <axxo@gentoo.org> junit-3.8.1-r1.ebuild:
  use java-pkg_dohtml instead of dohtml to also install the package-list in
  case of api docs: #50740

*junit-3.8.1-r1 (10 Sep 2004)

  10 Sep 2004; Thomas Matthijs <axxo@gentoo.org> -files/junit-3.7-build.xml,
  +junit-3.8.1-r1.ebuild, -junit-3.8.1.ebuild:
  revision bump: ant moved to ant-core

  19 Jan 2004; Adrian Almenar <strider@gentoo.org> junit-3.8.1.ebuild:
  Added amd64 keyword.

  17 Jan 2004; Adrian Almenar <strider@gentoo.org> junit-3.8.1.ebuild:
  Added RESTRICT="nomirror" and updated SRC_URI.

  03 Oct 2003; Adrian Almenar <strider@gentoo.org> junit-3.8.1.ebuild:
  Fixes bug #23707

*junit-3.7-r2 (14 Mar 2003)

  14 Mar 2003; Dylan Carlson <absinthe@gentoo.org> junit-3.7-r2.ebuild,
  files/junit-3.7-build.xml:
  Fixed ant build problem reported in user forums, and got this process
  to compile.  Closes #17284.

*junit-3.8.1 (14 Oct 2002)
