@@ -1,0 +1,3 @@
+MD5 5110326e4b7f7497dfa60ede4b626751 junit3.8.1.zip 441665
+RMD160 d9f63f651dd0954ffca8975a8bcf2e53c6b14574 junit3.8.1.zip 441665
+SHA256 884953028bc3d2d554f99b5f627a84d7f92a42754560c63829b0ab732ff9bab8 junit3.8.1.zip 441665
