@@ -1,6 +1,12 @@
 # ChangeLog for dev-java/junit
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/junit/ChangeLog,v 1.22 2006/07/21 01:57:02 nichoj Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/junit/ChangeLog,v 1.23 2006/07/22 20:12:30 nelchael Exp $
+
+*junit-3.8.1-r3 (22 Jul 2006)
+
+  22 Jul 2006; Krzysiek Pawlik <nelchael@gentoo.org> -junit-3.8.1-r2.ebuild,
+  +junit-3.8.1-r3.ebuild:
+  Add java-ant-2.
 
 *junit-3.8.1-r2 (21 Jul 2006)
 
